# LinkedInAIAgent

./: .gitignore  LICENSE  README.md
crew_ai_course/: .gitignore
crew_ai_course/ai_latest_development/src/ai_latest_development/: crew.py  main.py  report.md
crew_ai_course/ai_news/src/ai_news/: crew.py  main.py  report.md
crew_ai_course/ai_news/src/ai_news/config/: agents.yaml  tasks.yaml
crew_ai_course/ai_news/src/ai_news/news/: 2025-01-01_news_article.md
crew_ai_course/linkedin_automation/: README.md  pyproject.toml
crew_ai_course/linkedin_automation/src/linkedin_automation/: crew.py  crowdfunding_trends_summary.md  main.py  report.md
crew_ai_course/linkedin_automation/src/linkedin_automation/config/: agents.yaml  tasks.yaml
crew_ai_course/linkedin_automation/src/linkedin_automation/tools/: scraper.py
crew_ai_course/meeting_minutes/: pyproject.toml
crew_ai_course/meeting_minutes/src/meeting_minutes/: main.py
crew_ai_course/meeting_minutes/src/meeting_minutes/crews/gmailcrew/: gmailcrew.py
crew_ai_course/pdf_rag/: pyproject.toml
crew_ai_course/pdf_rag/src/pdf_rag/: crew.py  main.py
crew_ai_course/pdf_rag/src/pdf_rag/config/: agents.yaml  tasks.yaml
crew_ai_course/pdf_rag/src/pdf_rag/db/: chroma.sqlite3
crew_ai_course/poem_flow/: pyproject.toml
crew_ai_course/poem_flow/src/poem_flow/: main.py  poem.txt
postingAgent/: SystemDiagram.drawio  main.py  requirements.txt
postingAgent/linkedin_automation/: requirements.txt
postingAgent/linkedin_automation/src/: content_generator.py  linkedin_poster.py  main.py
(+2 files in other folders)
