[project]
name = "linkedin_automation"
version = "0.1.0"
description = "linkedin_automation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
linkedin_automation = "linkedin_automation.main:run"
run_crew = "linkedin_automation.main:run"
train = "linkedin_automation.main:train"
replay = "linkedin_automation.main:replay"
test = "linkedin_automation.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
